Fixed go-back btn visibility

--- a/src/components-styles/bottom-page-nav.scss
+++ b/src/components-styles/bottom-page-nav.scss
@@ -19,6 +19,7 @@
   margin: 0;
   padding: 0;
   font-size: .8em;
+  visibility: hidden;
 }
 
 #go-back-btn:hover {
