--- a/src/components-styles/personal-info.scss
+++ b/src/components-styles/personal-info.scss
@@ -16,6 +16,7 @@
     border-radius: 6px;
     background-color: transparent;
     border: 1px solid $Cool-gray;
+    outline: none;
     color: $Marine-blue;
     cursor: pointer;
 
